Prevent body overflow

--- a/resources/sass/_base.scss
+++ b/resources/sass/_base.scss
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Nunito');
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,400');
 
+body {
+  overflow-x: hidden;
+}
+
 .navbar-laravel {
   background-color: #fff;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.04);
